Customer & Product fixes
