# internal/server/transform.go
@@ -8,10 +8,20 @@ import (
 )
 
 func FromAPIProductToModelsProduct(product api.Product) models.Product {
+	var (
+		description string
+	)
+
+	if product.Description != nil {
+		description = fmt.Sprint(*product.Description)
+	}
+
 	return models.Product{ // nolint:exhaustruct
-		Name:     product.Name,
-		Price:    product.Price,
-		Quantity: *product.Quantity,
+		ID:          product.Id,
+		Name:        product.Name,
+		Price:       product.Price,
+		Quantity:    product.Quantity,
+		Description: description,
 	}
 }
 
@@ -26,9 +36,11 @@ func FromAPIProductListToModelsProductList(products api.ProductList) []models.Pr
 
 func FromModelsProductToAPIProduct(product models.Product) api.Product {
 	return api.Product{ // nolint:exhaustruct
-		Name:     product.Name,
-		Price:    product.Price,
-		Quantity: &product.Quantity,
+		Id:          product.ID,
+		Name:        product.Name,
+		Price:       product.Price,
+		Quantity:    product.Quantity,
+		Description: &product.Description,
 	}
 }
 
@@ -40,20 +52,63 @@ func FromModelsProductListToAPIProductList(products []models.Product) api.Produc
 	return productList
 }
 
+func FromAPILineItemToModelsProduct(lineItem api.LineItem) models.Product {
+	return models.Product{
+		ID:       lineItem.ProductId,
+		Quantity: lineItem.Quantity,
+	}
+}
+
+func FromAPILineItemListToModelsProductList(lineItems []api.LineItem) []models.Product {
+	productList := make([]models.Product, 0, len(lineItems))
+
+	for _, lineItem := range lineItems {
+		productList = append(productList, FromAPILineItemToModelsProduct(lineItem))
+	}
+	return productList
+}
+
 func FromAPIOrderToModelsOrder(order api.Order) models.Order {
+	var (
+		paymentStatus = "unpaid"
+		orderStatus   = "pending"
+	)
+
+	if order.PaymentStatus != nil {
+		paymentStatus = fmt.Sprint(*order.PaymentStatus)
+	}
+
+	if order.Status != nil {
+		orderStatus = fmt.Sprint(*order.Status)
+	}
+
 	return models.Order{ // nolint:exhaustruct
 		CustomerID:    order.CustomerId,
-		PaymentStatus: fmt.Sprint(order.PaymentStatus),
-		Status:        fmt.Sprint(order.Status),
+		PaymentStatus: paymentStatus,
+		Status:        orderStatus,
 		TotalPrice:    order.TotalPrice,
+		Products:      FromAPILineItemListToModelsProductList(order.Products),
 	}
 }
 
 func FromModelsOrderToAPIOrder(order models.Order) api.Order {
+	var (
+		paymentStatus,
+		orderStatus interface{}
+	)
+
+	if order.PaymentStatus != "" {
+		paymentStatus = order.PaymentStatus
+	}
+
+	if order.Status != "" {
+		orderStatus = order.Status
+	}
+
 	return api.Order{ // nolint:exhaustruct
 		CustomerId:    order.CustomerID,
-		PaymentStatus: order.PaymentStatus,
-		Status:        order.Status,
+		PaymentStatus: &paymentStatus,
+		Status:        &orderStatus,
 		TotalPrice:    order.TotalPrice,
 	}
 }
@@ -83,14 +138,20 @@ func FromModelsCustomerListToAPICustomerList(customers []models.Customer) api.Cu
 
 func FromModelsCustomerToAPICustomer(customer models.Customer) api.Customer {
 	return api.Customer{ // nolint:exhaustruct
-		Id:   customer.ID,
-		Name: customer.Name,
+		Id:      customer.ID,
+		Name:    customer.Name,
+		Email:   customer.Email,
+		Phone:   customer.Phone,
+		Address: customer.Address,
 	}
 }
 
 func FromAPICustomerToModelsCustomer(customer api.Customer) models.Customer {
 	return models.Customer{ // nolint:exhaustruct
-		Name: customer.Name,
+		Name:    customer.Name,
+		Email:   customer.Email,
+		Phone:   customer.Phone,
+		Address: customer.Address,
 	}
 }
 
